Fixed z-index mistake

--- a/frontend/src/components/AboutMe/AboutMe.module.scss
+++ b/frontend/src/components/AboutMe/AboutMe.module.scss
@@ -7,6 +7,7 @@
   grid-auto-flow: row dense;
   column-gap: 1rem;
   align-items: center;
+  z-index: 5;
 
   * {
     grid-column: 1 / -1;
